특수문자 코드 구현 확인

--- a/Basic.html
+++ b/Basic.html
@@ -38,6 +38,12 @@
     <br />
     <code> code : 프로그램 코드를 보여줄 때 쓰이며, 타자체로 보여줌</code>
     <u> u: 밑줄을 그어줌</u>
+
+    <div>특수 문자의 출력 : 특수문자는 html에서 다른 태그와 혼동이 될 수 있기 때문에 다음과 같이 특수 문자로 처리함</div>
+    <div>and 표시 : &amp;</div>
+    <div>작은 꺽새 : &lt; &gt;</div>
+    <div>따옴표 : &quot;</div>
+    <div>공백 : &nbsp;zz&nbsp;z</div>
 </body>
 
 </html>
