--- a/Basic.html
+++ b/Basic.html
@@ -44,6 +44,19 @@
     <div>작은 꺽새 : &lt; &gt;</div>
     <div>따옴표 : &quot;</div>
     <div>공백 : &nbsp;zz&nbsp;z</div>
+
+    <p>
+        br태그는 줄을 바꿉니다.<br />
+        p 태그는 줄을 바꾸고,
+        동시에 다음에 한 줄을 띄웁니다.
+    </p>
+    <pre>pre 태그는 태그 안의 모든 문자들 // 공백           등 
+
+        줄바꿈 등의 모든 형식을 그대로 유지합니다.
+    </pre>
+
+    <div>인용태그</div>
+    <blockquote> blockquote 태그 안에 문장은 인용구로 표시된다.</blockquote>
 </body>
 
 </html>
