이메일편지태그, 이미지태그

--- a/이메일편지.html
+++ b/이메일편지.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>연결태그</title>
+    <title>이메일편지태그</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <h1>Email로 편지쓰기</h1>
     </div>
     <address>
-        관리자<a href="mailto:tmdgy6232@naver.com">tmdgy6232@naver.com으로 메일쓰기</a>
+        관리자<a href="mailto:tmdgy6232@naver.com">tmdgy6232@naver.com으로 메일쓰기</a>
     </address>
 
 </body>
