--- a/테이블태그.html
+++ b/테이블태그.html
@@ -12,14 +12,143 @@
         <h1>테이블태그</h1>
     </div>
     <pre>
+        웹 페이지에서 테이블을 삽입하는 방법은 table 태그를 사용한다. 테이블을 사용할 때의 장점은 단순한 도표뿐만 아니라 복잡한 문단을 정렬할 수 있고
+        표제 지정도 가능하다. 또한, 일목요연하게 항목ㄷ글을 비교할 수 있으며, 문서를 깔끔하게 정리할 수 있다. 
+        table : 테이블을 선언하는 태그
+        tr : table row , 태이블 내의 한 행을 정의한다.
+        td : table data, 각 행의 셀을 만들 때 사용한다
+        th : table header, 행에 있는 셀의 제목을 지정하여 강조되게 표시한다
+        caption : 테이블의 제목을 표시한다.
 
+        테이블을 사용할 때 table 태그는 테이블의 시작과 끝을 알리는 표식이다. 그리고 테이블에서 줄(row)에 해당하는 태그는 tr태그이고
+        각 열(column)에 해당하는 태그는 td태그이다. td 대신 th태그를 쓰면 수평, 수직 정렬이 자동으로 가운데가 되며, bold체로 표시된 표제가 된다.
+         표에 제목을 붙이는 태그로 caption을 사용하며 얼라인 속성을 이용하여 테이블의 제목을 정렬할 수 있따. caption 태그는 table 태그 바로 앞에서만
+         사용할 수 있으며, table 태그 하나에 caption  태그 하나만 사용 가능하다.
 
     </pre>
 
     <div>
-        <h1>번호없는 목록 만들기</h1>
+        <h1>테이블 삽입</h1>
     </div>
 
+    <table border="1">
+        <caption>도서 쇼핑몰</caption>
+        <tr>
+            <td>교보문고</td>
+            <td>
+                <a href="http://www.kyobobook.co.kr">www.kyobobook.co.kr</a>
+            </td>
+        </tr>
+        <tr>
+            <td>영풍문고</td>
+            <td>
+                <a href="http://www.ypbooks.co.kr">www.ypbooks.co.kr</a>
+            </td>
+        </tr>
+        <tr>
+            <td>yes24</td>
+            <td> <a href="http://www.yes24.com">www.yes24.com</a></td>
+        </tr>
+    </table>
+
+    <pre>
+        <h2> 테이블의 속성</h2>
+        width = '픽셀 수' or '백분율' : 테이블의 가로 크기
+        height = '픽셀 수' or '백분율' : 테이블의 세로 크기
+        border = '픽셀 수' : 테이블의 테두리 굵기
+        cellspacings = '픽셀 수' : 셀과 셀 사이의 여백
+        cellpadding = '픽셀 수' : 셀과 문자 사이의 여백
+        bgcolor = '색상명' or 'rgb값' : 테이블의 색 지정
+    </pre>
+
+    <h1> 테이블의 여러가지 속성들 예제</h1>
+
+    <h3>메뉴</h3>
+    <table border="5" width="80%" height="30%">
+        <tr>
+            <td>품명</td>
+            <td>금액</td>
+            <td>주요재료</td>
+        </tr>
+        <tr>
+            <th>짬뽕</th>
+            <td>5,000원</td>
+            <td>면, 홍합, 오징어</td>
+        </tr>
+        <tr>
+            <td>짜장</td>
+            <td>5,000원</td>
+            <td>면, 돼지고기, 양파</td>
+        </tr>
+    </table><br />
+
+    <table border="1" cellpadding="20" width="50%">
+        <tr>
+            <td>품명</td>
+            <td>금액</td>
+            <td>주요재료</td>
+        </tr>
+        <tr>
+            <td>짬뽕</td>
+            <td>5,000원</td>
+            <td>면, 홍합, 오징어</td>
+        </tr>
+        <tr>
+            <td>짜장</td>
+            <td>5,000원</td>
+            <td>면, 돼지고기, 양파</td>
+        </tr>
+    </table>
+    <br />
+
+    <table border="1" cellspacing="10" width="50%">
+        <tr>
+            <td>품명</td>
+            <td>금액</td>
+            <td>주요재료</td>
+        </tr>
+        <tr>
+            <th>짬뽕</th>
+            <th>5,000원</th>
+            <th>면, 홍합, 오징어</th>
+        </tr>
+        <tr>
+            <td>짜장</td>
+            <td>5,000원</td>
+            <td>면, 돼지고기, 양파</td>
+        </tr>
+    </table>
+
+    <pre>
+        <h3>셀 합치기</h3>
+        테이블 태그 내의 속성(셀 합치기)
+        rowspan = 행의 수 : 여러 행에 걸치는 셀의 행 합치기
+        colspan = 행의 수 : 여러 열에 걸치는 셀의 열 합치기
+    
+        테이블에서 rowsapn은 여러 행에 걸쳐져 있는 셀을 합칠 때 사용하고,
+        colspan은 같은 행에서 여러 열을 합칠 때 사용한다. 이 때 rowspan과 colspan은 먼저 나오는 td에 합쳤음을 의미하며, 몇 개를 합칠 것 인지를
+        숫자로 적어 준다.
+    </pre>
+    <table width="200" border="1">
+        <tr>
+            <td rowspan="2">IT공학부</td>
+            <td>레저it 전공</td>
+        </tr>
+        <tr>
+            <!-- 여기 칸이 위로 가서 합쳐짐 -->
+            <td>컴퓨터공학 전공</td>
+        </tr>
+    </table>
+    <table width="200" border="1">
+        <tr>
+            <td colspan="2">IT공학부</td>
+            <!-- 여기 칸이 옆으로 가서 합쳐짐 -->
+        </tr>
+        <tr>
+            <td>컴퓨터공학 전공</td>
+            <td>컴퓨터공학 전공</td>
+        </tr>
+    </table>
 </body>
 
 </html>
