--- a/javascript함수.html
+++ b/javascript함수.html
@@ -82,8 +82,15 @@
          cofirm() : 확인과 취소 버튼이 있는 확인/취소 대화상자를 생성해주는 함수
          prompt() : 확인과 취소 버튼이 있고 입력상자가 있는 대화상자를 생성해주는 함수
          parseint(문자열, [진수]) : 문자열을 정수형으로 변환하여 리턴한다, 진수는 8, 10, 16진수 중에서 하나를 설정할 수 있으며, 기본값은 10진수이다. 
-         
+         parsefloadt(문자열) : 문자열을 실수값으로 변환하여 리턴한다. 만약 첫번째 글자를 숫자로 변환하지 못할 경우에는 NaN으로 리턴한다. 
+         isNaN(검색할숫자) : 제공된 ㅜㅅ자가 타당하지 않ㅎ은 연산결과가 발생할 경우에는 true, 아니면 false를 리턴한다. 
+         isFinite(검색할 숫자) : 제공된 숫자가 양의 무한대나 음의 무한대를 가지는 경우에는 false, 아닐때는 true를 리턴함
+         escape(특정문자) : A-Z, a-z, 1-0, @*-_+./를 제외한 모든 문자를 %16진수의 아스키 코드값으로 변환한다. 1바이트 문자는 %xx의 형태로
+                        2 바이트의 문자는 %uXXXX의 형태로 변환한다. 
+        unescape(아스키코드) : %16진수의 아스키코드를 문자로 변환한다. 
+        eval(수식문자열) : 문자열을 숫자로 변환한 후 그 결과값을 리턴한다. 
     </pre>
+    
 </body>
 
 </html>
