--- a/javascript객체.html
+++ b/javascript객체.html
@@ -18,6 +18,27 @@
             this.age = page;
             this.print = Display;
         }
+
+        function cal_slength(){
+            console.log('init');
+            var tempStr, temp=0, onechar, tcount=0;
+
+            tempStr = new String(document.smsform.content.value);
+            temp = tempStr.length;
+
+            for(var k=0; k<temp; k++){
+                onechar = tempStr.charAt(k);//  1바이트 추출
+                if(escape(onechar) == '%u'){} // 한글확인
+                else if(escape(onechar).length > 4) { tcount += 2;}
+                else tcount++;
+            }
+
+            document.smsform.msgleng.value = tcount;    // 바이트수 출력
+            document.smsform.msgenc.value = escape(tempStr) + unescape(escape(tempStr));  // 인코딩 출력
+
+            document.writeln("anchor".anchor("자바스크립트의 객체"));
+
+        }
     </script>
 </head>
 
@@ -151,6 +172,15 @@
         document.writeln("글자색 : " + "Javascript".fontcolor("blue"));
         document.writeln("깜빡이는 글자 : " + "Javascript".blink());
     </script>
+    <pre>
+        <h2>String method example2</h2>
+
+    </pre>
+    <form name="smsform" method="post" action="sms.php">
+        사랑하는 분의 성명은 ? <input name="content" onkeyup="cal_slength();" />
+        문자길이 : <input name="msgleng" type="text" size="2" maxlength="2" readonly value="0"/>
+        문자 인코딩 : <input name="msgenc" type="text" size="40" readonly/>
+    </form>
 </body>
 
 </html>
