--- a/javascript객체.html
+++ b/javascript객체.html
@@ -181,6 +181,57 @@
         문자길이 : <input name="msgleng" type="text" size="2" maxlength="2" readonly value="0"/>
         문자 인코딩 : <input name="msgenc" type="text" size="40" readonly/>
     </form>
+
+    <h2>Math 객체</h2>
+    <pre>
+        Math객체는 수학연산을 수행하기 위해 지원하는 객체로서, 삼각함수, 지수함수, 로그함수와 같은 특수 함수들과 파이, e와 같은 특수 값들을 이용하기 위해
+        제공되는 객체이다. 
+        이 객체는 다른 내장 개개체와 다르게 정적객체(static object)이기 때문에 new 연산자를 사용하지않고, 그 자체를 직접 참조함으로 사용된다. Math객체의
+        속성과 메소드는 다음과 같이 앞에 객체명 Math를 붙여서 사용하면 된다. 
+
+        // 속성
+        Math.SORT2 // sort앞에 개개체명 Math를 써주고 sort2를 기입한다. 
+        // 메소드 
+        Math.sin(1,5)// sin 앞에 객체명 Math를 써주고 sin(1,5)를 기입한다. 
+
+        <h2>Math객체의 속성</h2>
+
+        E : 자연로그의 밑으로 사용하는 오일러 상수(약 2.718)
+        PI : 원주율 파이 약(3.141592)
+        LN2 : 2의 자연로그 약(0.693)
+        LN10 : 10의 자연로그 약( 2.302)
+        SQRT2 : 2의 제곱근 약(1.414)
+        SQRT_2 : 1/2의 제곱근 약(0.707)
+        
+        <h2>Math객체의 메소드</h2>
+        abs(x) : 절대값을 구하는 함수
+        asin(x) : arc sine 함수 
+        acos(x) : arc cosine 함수
+        atan(x) : arc tangent 함수
+        sin(x) : sine 함수 
+        cos(x) : cosine 함수 
+        tan(x) : tangent 함수
+        pow(x,y) : x의 y승을 구하는 함수 
+        sqrt(x) : 제곱근의 값을 구하는 함수
+        exp(x) : 지수함수 
+        log(x) : 자연로그함수
+        ceil(x) : x보다 같거나 큰 수 중에서 제일 작은 정수 즉 x의 소수부분 올림
+        floor(x) : x보다 같거자 작은 수 중에서 가장 큰 정수, 즉 x의 소수부분 내림
+        round(x) : x의 반올림
+        max(x,y) : x와 y중에서 큰 수를 반환하는 함수
+        min(x,y) : x와 y중에서 작은 수를 반환하는 함수
+        random() : 0과 1 사이의 난수 발생
+
+    </pre>
+    <h2>Math 객체 사용</h2>
+    <script language="JavaScript">
+        document.write("오일러 상수 : " + Math.E + "<br/>");
+        document.write("2의 자연로그 : " + Math.LN2 + "<br/>");
+        document.write("10의 자연로그 : " + Math.LN10 + "<br/>");
+        document.write("오일러 상수 : " + Math.E + "<br/>");
+        document.write("오일러 상수 : " + Math.E + "<br/>");
+
+    </script>
 </body>
 
 </html>
