--- a/달력만들기.html
+++ b/달력만들기.html
@@ -36,9 +36,39 @@
             document.write("<table border=1 align=center background='#99ff33'> ");
             document.write("<th colspan=7><font color='66666cc' size=5>");
             document.write(year + "년 " + (month + 1) + "월</font></th>");
-            document.write("</table>")
+
+            var tdOpen = "<td bgcolor='aaff00' width=70 height=30>";
+            var tdClose = "</font></B></td>";
+
+            // 달력 상단에 요일 출력
+            document.write("<tr align=center valign=center>");
+            for (i = 0; i <= 6; i++) document.write("<td bgcolor='aaff00' width=70 height=30>" + week[i] + "</td>");
+            document.write("</tr><tr align=right>");
+            var column = 0;
+            for (i = 0; i < startDay; i++) {  // 1일이 시작하는 요일 출력
+                document.write("<td>*❤️*</td>");
+                column++;
+            }
+
+            for (i = 1; i < days[month - 1]; i++) { // 오늘인 경우는 굵게 출력
+                if ((i == tdd) && (month == tmm) && (year == tyy)) {
+                    document.write("<td height=50><B><font color='#ff0000'>", i, "<br/>", currenttime(), "</font></B></td>");
+                } else {
+                    document.write("<td height=50>", i, "</td>");
+                }
+                column++;
+                if (column == 7) {    // 토요일까지 출력 후 줄바꿈
+                    document.write("</tr><tr align=right>");
+                    column = 0;
+                }
+            }
+            document.write("</tr></table>");
         }
-        Calendar(2021, 4);
+        var today = new Date();
+        var tyy = today.getFullYear();
+        var tmm = today.getMonth() + 1;
+        var tdd = today.getDate();
+        Calendar(tyy, tmm);
     </script>
 
 </body>
